# Assignment-Problem

client/: package-lock.json
client/src/: App.jsx  MainPage.css  MainPage.jsx  MatrixComponent.jsx
server/: main.py  pyproject.toml  solver.py
solver/: app.py  pyproject.toml  requirements.txt  server.py  solver.py  test.py
