[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["artyomklg <artem0801200269@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ortools = "^9.8.3296"
fastapi = "^0.109.2"
uvicorn = {extras = ["standart"], version = "^0.27.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
